# pstu

./: .gitignore  README.md  push.sh  pusher.bat  БД1 Отчет.docx  ООП1 Отчет.docx  Расписание.xlsx
1С/: 1Cv8.1CD
DB Labs/: Laboratornaya_rabota_1.docx  Laboratornaya_rabota_2.doc  Laboratornaya_rabota_3.doc  Laboratornaya_rabota_4.doc  Laboratornaya_rabota_5.doc  Laboratornaya_rabota_6.doc  Laboratornaya_rabota_7.docx
Info Labs/: f.txt  lab5.vbs  lab6.js  lab8.ps1  Отчет2.docx  Отчет3.docx  Отчет5.docx  Отчет6.docx  Отчет7.docx
Messager/: Messager.sln  Свой вайбер.docx
Администрирование информационных систем/: common.sh  lr1.sh  lr2.sh  АИС ЛР1 РИС19 Миннахметов.docx  Лабораторные работы 1-3.docx
Английский/: 112 С.docx
БД/: v2.docx  Лабораторная работа 3.docx
БД лабы/: Laboratornaya_rabota_8.docx
Дискретная математика/: Euler.bat
Защита информации/: Исходники1.odt  Миннахметов №1.docx
Защита информации/desktop/: Arithmetic.cpp  Arithmetic.h  BigInt.h  CMakeLists.txt  CicleTask.cpp  CicleTask.h  Des.h  DesTask.cpp  DesTask.h  GammaTask.cpp  GammaTask.h  GronsfeldTask.cpp  GronsfeldTask.h  HashTask.cpp  HashTask.h  Huffman.cpp  Huffman.h  HuffmanTask.cpp  HuffmanTask.h  Loader.cpp  Loader.h  TaskManager.h  Window.h
Защита информации/untitled/: BigInt.cpp  BigInt.h  CMakeLists.txt  DESTask.h  DesTask.cpp  DesTask.h  ElgamalTask.cpp  ElgamalTask.h  GronsfeldTask.h  HashTask.h  HuffmanTask.h  Loader.cpp  Loader.h  PickTask.h  RSATask.h  RsaTask.cpp  RsaTask.h  Task.h  TaskManager.h  Window.h  main.cpp
Интернет вещей/: holidays.txt
Информатика/: Практика 6.doc  Практика 7.doc  Теория 4.doc
Компьютерная графика/: !!!Задания_КГ_12345678 (для студентов).doc  .~lock.Zadania_KG_1234.doc#  .~lock.Лекции 4-5. Реалистичность. Часть 2.ppt#  Zadania_KG_1234.doc  index.html  matrix.txt  Задание за отменённый вторник.docx  Книга1.xlsx  Страницу HTML.html  Тексты на Паскале.rar
Компьютерная графика/graphics/: CMakeLists.txt  Canvas.cpp  Canvas.h  Line.cpp  Line.h  Mode.cpp  Mode.h  WidthDialog.cpp  WidthDialog.h  common.cpp  common.h
Компьютерная графика/graphics/common/: Const.cpp  Const.h  Func.cpp  Func.h  Graphic.cpp  Graphic.h  Matrix.cpp  Matrix.h  Splines.cpp  Splines.h  common.cpp  common.h  splines.cpp
Компьютерная графика/graphics/common/widgets/: Slider.cpp  Slider.h
Компьютерная графика/graphics/dz4/: Dz4.h  main.cpp
Компьютерная графика/graphics/dz5/: Dz5.h  main.cpp
Компьютерная графика/graphics/dz6/: Dz6.cpp  Dz6.h  main.cpp
Компьютерная графика/graphics/fractal/: Canvas.cpp  Canvas.h  FractalEditor.cpp  FractalEditor.h  main.cpp
Компьютерная графика/graphics/home/: Home.h  main.cpp
Компьютерная графика/graphics/human/: Human.h  main.cpp
Компьютерная графика/graphics/line/: Canvas.cpp  Canvas.h  Line.cpp  Line.h  Mode.cpp  Mode.h  main.cpp
Компьютерная графика/graphics/line/dialogs/: WeightDialog.cpp  WeightDialog.h
Компьютерная графика/graphics/line/figures/: Fractal.cpp  Fractal.h  Line.cpp  Line.h  Point.cpp  Point.h
Компьютерная графика/graphics/line/modes/: CreateMode.cpp  CreateMode.h  EditMode.cpp  EditMode.h  GroupMode.cpp  GroupMode.h  MoveMode.cpp  MoveMode.h  ProjectMode.cpp  ProjectMode.h  RemoveMode.cpp  RemoveMode.h
Компьютерная графика/graphics/line/widgets/: LineCleaner.cpp  LineCleaner.h  LineEditor.cpp  LineEditor.h  LineProjector.cpp  LineProjector.h  Slider.cpp  Slider.h
Компьютерная графика/graphics/multy/: Multy.cpp  Multy.h  main.cpp
Компьютерная графика/graphics/point/: Point.h  main.cpp
Компьютерная графика/graphics/spline/: Splines.cpp  Splines.h  main.cpp
Конкурс/: Презентация.pptx
Летняя сессия 2021/: Вопросы на экзамен по БД для очников.doc.odt  Перечень вопросов для подготовки к диф.зачету.docx.odt
МС/: lw1.html  lw2.html
ООП/: MarksForStudents.rar  Тема_20_Работа с базами данных.pptx
ООП Лабы/: Download errors.txt  TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs.txt  TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs.txt  TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs.txt  Практическая работа №10.docx  Практическая работа №8.docx
ООП Лекции/: 1_ЖЦ ПО_new.pptx  2_Состав языка C_new.pptx  3_Основные операторы.pptx  Тема_10_Работа с файлами.pptx  Тема_11_Объектно-ориентированное программирование new.pptx  Тема_12_Основные свойства ОО программирования_new.pptx  Тема_13_Обобщенные типы данных.pptx  Тема_14_АТД_Коллекции_ОбобщенныеКоллекции.pptx  Тема_15_Динамические структуры данных_new.pptx  Тема_16_Объектно-событийное программирование.pptx  Тема_17_LINQ to Objects_new.pptx  Тема_18_Многопоточное_программирование.pptx  Тема_19_ОО подход и язык UML.pptx  Тема_20_Работа с базами данных.pptx  Тема_4_ОдномерныеМассивы.pptx  Тема_5_Функции.pptx  Тема_6_Многомерные массивы.pptx  Тема_7_Строки.pptx  Тема_8_Понятие класса.pptx  Тема_9_Создание приложений под OC Windows.pptx
ООП1/: Lab1.sln
Организация ЭВМ и систем/: вопросы на зачет.docx  лекция 3.pptx  лекция 4.pptx  лекция 5.pptx  лекция 6 (обзорная для самостоятельного изучения).pptx  лекция 7.pptx
Практика/: 1.txt  INDIVIDUALNIIY_DOGOVOR_i_perechen_dolgosroch__dogovorov_(dlya_sayita)s_19.04.2021(5).doc  otchetnye_dokumenty_po_praktike_nov_ispr(4).doc  putevka_na_praktiku_(licevaya_storona).doc  putevka_na_praktiku_(obratnaya_storona).doc  web.xml  Отчёт.odt
Системное программирование/КР/kr/: CMakeLists.txt  client.c  client.h  consts.h  main_client.c  main_server.c  main_work.c  server.c  server.h
Системное программирование/КР/kr/src/: common.h
Системное программирование/КР/kr/src/client/: main.c
Системное программирование/КР/kr/src/server/: main.c
Социология/: Типы мотивации.docx
ТОАУ/: V1_Instruktsia_AS_gr_RIS-19-1b.docx  V1_Org_inf_SP_gr_RIS-19-1b.ppt
УИР/: Калькулятор.doc  Статья.doc
УПП/: Информационные технологии в управлении проектами.docx  Лекция1.1.doc  Метод распределения ресурсов.docx  Метод распределения ресурсов.ppt  Методология управления проектами.docx  Определение операций для сокращения времени их выполнения.docx  ОсобенностиУправления проектами.pptx  (+15 more)
(+1603 files in other folders)
